# ImapClient

./: CMakeLists.txt  imapclient.h
src/: imap_global.h  imapclient.cpp  imapclient.h
test/: CMakeLists.txt  test_imap.cpp
